--- a/html/intensional.examples.stack_impl.html
+++ b/html/intensional.examples.stack_impl.html
@@ -39,6 +39,15 @@
 <span class="id" title="keyword">From</span> <span class="id" title="var">intensional</span> <span class="id" title="keyword">Require</span> <a class="idref" href="intensional.examples.stack.html#"><span class="id" title="library">stack</span></a> <a class="idref" href="intensional.examples.traversable_stack.html#"><span class="id" title="library">traversable_stack</span></a>.<br/>
 
 <br/>
+</div>
+
+<div class="doc">
+<a id="lab32"></a><h3 class="section">Bonus: an example implementation of a stack library satisfying the specifications in <span class="inlinecode"><span class="id" title="library">stack</span></span> and <span class="inlinecode"><span class="id" title="library">traversable_stack</span></span>.</h3>
+
+</div>
+<div class="code">
+
+<br/>
 <span class="id" title="keyword">Module</span> <a id="Stack_impl" class="idref" href="#Stack_impl"><span class="id" title="module">Stack_impl</span></a>.<br/>
 <span class="id" title="keyword">Section</span> <a id="Stack_impl.S" class="idref" href="#Stack_impl.S"><span class="id" title="section">S</span></a>.<br/>
 <span class="id" title="keyword">Context</span> {<a id="0101b9beac487b383a5ba2a8f6922788" class="idref" href="#0101b9beac487b383a5ba2a8f6922788"><span class="id" title="binder">Σ</span></a>: <a class="idref" href="https://plv.mpi-sws.org/coqdoc/iris//iris.base_logic.lib.iprop.html#gFunctors"><span class="id" title="definition">gFunctors</span></a>}.<br/>
