--- a/html/intensional.examples.traversable_stack.html
+++ b/html/intensional.examples.traversable_stack.html
@@ -42,18 +42,13 @@
 <div class="doc">
 <a id="lab21"></a><h2 class="section">Stack with a <span class="inlinecode"><a class="idref" href="intensional.examples.stack_impl.html#Stack_impl.foreach"><span class="id" title="definition">foreach</span></a></span> operation (Section 5.4)</h2>
 
-</div>
-<div class="code">
+<div class="paragraph"> </div>
 
-<br/>
-<span class="comment">(*&nbsp;Minor&nbsp;remark:&nbsp;compared&nbsp;to&nbsp;the&nbsp;paper,&nbsp;we&nbsp;assume&nbsp;a&nbsp;<span class="inlinecode"><span class="id" title="var">create</span></span>&nbsp;function&nbsp;to<br/>
-&nbsp;&nbsp;&nbsp;initialize&nbsp;the&nbsp;library,&nbsp;instead&nbsp;of&nbsp;a&nbsp;condition&nbsp;□&nbsp;(P0&nbsp;-∗&nbsp;∃&nbsp;s,&nbsp;Stack&nbsp;<span class="inlinecode"></span>&nbsp;s).<br/>
-&nbsp;&nbsp;&nbsp;This&nbsp;is&nbsp;purely&nbsp;a&nbsp;matter&nbsp;of&nbsp;style.&nbsp;*)</span><br/>
+ Minor remark: compared to the paper, we assume a <span class="inlinecode"><a class="idref" href="intensional.examples.stack_impl.html#Stack_impl.create"><span class="id" title="definition">create</span></a></span> function to
+    initialize the library, instead of a condition □ (P0 -∗ ∃ s, Stack <font size=-2>&#9744;</font> s).
+    This is purely a matter of style. 
+<div class="paragraph"> </div>
 
-<br/>
-</div>
-
-<div class="doc">
 <a id="lab22"></a><h3 class="section">Separation logic specification</h3>
 
 </div>
